# divergencelens

./: .env.example  .gitignore  DESIGN_NOTES.md  LICENSE  LIMITATIONS.md  Makefile  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/ablations/: ablations.py
bench/annotation/: kappa.py  protocol.md
bench/baselines/: baselines.py  runner.py
bench/corpus/: synthetic_runs.py
bench/inject/: base.py  injectors.py
bench/metrics/: compute.py
examples/: quickstart.ipynb
results/: RESULTS.md  ablation_results.json  baseline_results.json  results.json
src/divergencelens/: __init__.py
src/divergencelens/alignment/: calibration.py  deterministic.py  fusion.py  judge.py
src/divergencelens/cli/: main.py
src/divergencelens/core/: config.py  events.py  registry.py  types.py
src/divergencelens/dashboard/: app.py
src/divergencelens/detection/: consistency_matrix.py  severity.py  taxonomy.py
src/divergencelens/ingest/: langgraph_state.py  langsmith_loader.py  subagent_resolver.py  trace_normalizer.py
src/divergencelens/integrations/: langsmith_feedback.py  otel_export.py
src/divergencelens/provenance/: entity_tracker.py  graph_builder.py  localizer.py
src/divergencelens/report/: aggregate_report.py  run_report.py
src/divergencelens/runtime/: interrupt.py  middleware.py  monitor.py  policy.py  rollback.py
src/divergencelens/sdk/: client.py
src/divergencelens/serve/: app.py
tests/smoke/: test_smoke.py
tests/unit/: test_core.py  test_detection.py
