[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "divergencelens"
version = "0.1.0"
description = "Reference-free, structurally-grounded silent-divergence auditing for LangChain Deep Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["langchain", "langgraph", "agents", "monitoring", "ai-safety", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "agentevals>=0.0.9",
    "aiosqlite>=0.20",
    "anthropic>=0.34",
    "click>=8.1",
    "deepagents>=0.6.11",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "langsmith>=0.8.18",
    "matplotlib>=3.9",
    "networkx>=3.3",
    "openai>=1.40",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "pandas>=2.2",
    "pydantic>=2.0",
    "rich>=13.7",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "sqlalchemy>=2.0",
    "streamlit>=1.37",
    "typer>=0.12",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
]

[project.scripts]
divergencelens = "divergencelens.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/divergencelens"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "UP007"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/divergencelens"]
omit = ["*/tests/*"]
